Stop hiding footer nav on mobile.

--- a/index.css
+++ b/index.css
@@ -60,3 +60,19 @@ body {
   height: 60px;
   background-color: #f5f5f5;
 }
+
+.navbar-collapse.collapse {
+  display: block!important;
+}
+
+.navbar-nav>li, .navbar-nav {
+  float: left !important;
+}
+
+.navbar-nav.navbar-right:last-child {
+  margin-right: -15px !important;
+}
+
+.navbar-right {
+  float: right!important;
+}
